# ffmpeg_encoder_plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md  av1_encoder.cpp  av1_encoder.h  encoder_info.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  h264_encoder.cpp  h264_encoder.h  h265_encoder.cpp  h265_encoder.h  plugin.cpp  plugin.h  svt_av1_encoder.cpp  svt_av1_encoder.h  uisettings_controller.cpp  uisettings_controller.h  x264_encoder.cpp  x264_encoder.h  x265_encoder.cpp  x265_encoder.h
wrapper/: CMakeLists.txt
